--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Specter Inspecter</h1>
+            <h1>Specter Inspector</h1>
             <span class="subheading">A Developement Production Blog</span>
           </div>
         </div>
