--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
         <h3>Halvor Remole</h3>
         <p>I'm a primarily a programmer with a little unity experience. I am familiar with Python, Java, C++, HTML, CSS, SCSS, and a little Assembly. My focus will be the coding background of the game, working with Bryant to create the fundamentals of our game in Unity.</p>
         <h3>Daniel Datu</h3>
-        <p></p>
+        <p>My name is Daniel Datu, a student environmental artist in the Game Development program at UB. Together with Bryant, Eric, and Halvor, we are developing a project named Specter Inspector, a story-driven RPG with turn-based combat. While in school, I hope to develop my skills in building assets to create portfolio-quality set pieces. I believe that an immersive environment can contribute to effective storytelling, and I hope to accomplish that through this project.</p>
       </div>
     </div>
   </div>
