--- a/index.html
+++ b/index.html
@@ -121,9 +121,8 @@
             <a href="#">Start Bootstrap</a>
             on July 8, 2019</p>
         </div>
--->
         <hr>
-        <!-- Pager -->
+        <!-- Pager ->
         <div class="clearfix">
           <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
         </div>
