--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/code-progress.png')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
