--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
+            <img class="img-responsive" src="img/polter-logo.png">
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
