--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <img src="img/polter-logopng" class="float-left img-fluid" alt="...">
+            <img src="img/polter-logo.png" class="float-left img-fluid" style="width: 25%" alt="...">
             <h1>Specter Inspector</h1>
             <span class="subheading">A Developement Production Blog</span>
           </div>
