updated halvor blog section

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
         <h3>Eric Saulsbury</h3>
         <p>I’m a 3D modeler with experience in photoshop, video and sound editing. I will be mainly be working on the character models and several objects in the game. I will also be assisting in sound design and texturing of the game.</p>
         <h3>Halvor Remole</h3>
-        <p>I'm a primarily a programmer with a little unity experience. I am familiar with Python, Java, C++, HTML, CSS, SCSS, and a little Assembly. My focus will be the coding background of the game, working with Bryant to create the fundamentals of our game in Unity.</p>
+        <p>I'm a primarily a programmer with a little unity experience. I am familiar with Python, Java, C++, HTML, CSS, SCSS, and a little Assembly. My focus will be the coding background of the game, working with Bryant to create the fundamentals of our game in Unity. While I am not immediately familiar with Unitiy's UI, it follows a pretty standard flow and much the work will be done in C# which is quite similar to C++ and will be relatively easy to pick up. Coding is a hobby of mine and there is nothing like a good project to stretch ones legs and teach you something new.</p>
         <h3>Daniel Datu</h3>
         <p>My name is Daniel Datu, a student environmental artist in the Game Development program at UB. Together with Bryant, Eric, and Halvor, we are developing a project named Specter Inspector, a story-driven RPG with turn-based combat. While in school, I hope to develop my skills in building assets to create portfolio-quality set pieces. I believe that an immersive environment can contribute to effective storytelling, and I hope to accomplish that through this project.</p>
       </div>
